fixed Utility function bugs